feat(wip): support pr workflows
